Started cleaning up a ton of the styling issues that keep cropping up around Atheos. Mainly just fine tuning the look and feel and hopefully coming to fix the awful dialog boxes

--- a/themes/atheos/modules/codegit/_main.scss
+++ b/themes/atheos/modules/codegit/_main.scss
@@ -36,7 +36,7 @@
 }
 
 #modal_content #codegit form {
-			background-color: $background;
+	background-color: $background;
 
 }
 
@@ -47,7 +47,7 @@
 
 #codegit {
 	display: flex;
-	border-top: $border-thin;
+	@include border(1px, top);
 
 	.big-icon {
 		font-size: 100%;
